tests/bad/frontend/multipleArgumentDeclaration.latte
int main() {return 0;}

void f(int a, int a) {}